Fix: scrollbar css

--- a/styles/_placeholder.scss
+++ b/styles/_placeholder.scss
@@ -1,5 +1,4 @@
 %scroll-bar {
-  scrollbar-width: thin; //firefox
   &::-webkit-scrollbar {
     width: 10px;
   }
